# advent-of-code-2023

./: Cargo.toml  create-project.sh
.github/workflows/: rust.yml
aoc2023lib/: Cargo.toml
aoc2023lib/src/: draw.rs  lib.rs
day01-trebuchet/src/: calibration_digit.rs  digit_word.rs  find_numbers.rs  main.rs  utils.rs
day02-cube-conundrum/: Cargo.toml
day02-cube-conundrum/src/: data.rs  grammar.pest  main.rs
day03-gear/: Cargo.toml  game.html
day03-gear/src/: lib.rs  main.rs  shader.wgsl
day04-scratchcards/: Cargo.toml
day04-scratchcards/src/: main.rs
day05-seed/: Cargo.toml
day05-seed/src/: main.rs  models.rs  parse.rs
day06-wait/: Cargo.toml
day06-wait/src/: main.rs
day07-camel/: Cargo.toml
day07-camel/src/: data.rs  main.rs  parse.rs
day07-camel/src/data/: part2.rs
day1-trebuchet/: Cargo.toml
day1-trebuchet/src/: find_numbers.rs  main.rs  utils.rs
