[package]
name = "aoc2023lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10.1"
log = "0.4.20"
paste = "1.0.14"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
tracing = { version = "0.1.40", features = [
    "log",
    "valuable"
] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = [] }
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }
color-backtrace = "0.6.1"
ctor = { version = "0.2.6", features = [] }
cairo-rs = { version = "0.18.3", features = ["png", "svg", "pdf", "ps", "freetype-rs"] }
pango = "0.18.3"
pangocairo = "0.18.0"
