[package]
name = "day02-cube-conundrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2023lib = { path = "../aoc2023lib" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
pest = "*"
pest_derive = "2.7.5"
unreachable = "1.0.0"
