[package]
resolver = "2"
name = "day03-gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
cfg-if = "1"
config = "0.13.4"
wasm-bindgen = "0.2.89"
pollster = "0.3"
wgpu_glyph = "0.21.0"
piston_window = "0.131.0"
cairo-rs = { version = "0.18.3", features = ["png", "svg", "pdf", "ps", "freetype-rs"] }
grid = "0.12.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]
