[package]
resolver = "2"
name = "day03-gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
winit = "0.28"
env_logger = "0.10"
log = "0.4"
config = "0.13.4"
cairo-rs = { version = "0.18.3", features = ["png", "svg", "pdf", "ps", "freetype-rs"] }
grid = "0.12.0"
tracing = { version = "0.1.40", features = [
    "log",
    "valuable"
] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = [] }
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }
pango = "0.18.3"

