[package]
name = "day04-scratchcards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
tracing = { version = "0.1.40", features = ["log", "valuable"] }
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }
