[package]
name = "day05-seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
regex = "1.10.2"
tracing = { version = "0.1.40", features = ["log", "valuable"] }
ctor = "0.2.6"
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }
