[package]
name = "day06-wait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
thiserror = "1.0.52"
tracing = { version = "0.1.40", features = ["valuable"] }
uom = { version = "0.35.0", features = ["u64", "usize", "i64", "isize", "rational"] }
ctor = "0.2.6"
indicatif = { version = "0.17.7", features = ["rayon", "unicode-segmentation", "improved_unicode", "futures", "vt100"] }
