[package]
name = "day07-camel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78", features = ["backtrace"] }
aoc2023lib = { version = "0.1.0", path = "../aoc2023lib" }
indicatif = { version = "0.17.7", features = ["rayon", "unicode-segmentation", "improved_unicode", "futures", "vt100"] }
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.53"
tracing = { version = "0.1.40", features = ["valuable"] }
ctor = "0.2.6"
