[package]
name = "day1-trebuchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10.1"
log = "0.4.20"
paste = "1.0.14"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
tracing = { version = "0.1.40", features = [
    "log",
    "valuable"
] }
tracing-core = "0.1.32"
valuable = { version = "0.1.0", features = ["valuable-derive", "derive"] }
tracing-subscriber = { version = "0.3.18", features = [] }
color-backtrace = "0.6.1"
ctor = { version = "0.2.6", features = [] }
